# LibOS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FutureVcpkg-LLVMPactch.txt  README.md  linux.dependance.txt  vcpkg.json
.github/workflows/: cmake.yml
CMake_Build_Platforms/: Linux.cmake  Windows.cmake  WindowsStore.cmake
CMake_Modules/: FindWayland.cmake
Includes/: RefractileAPI.h
Includes/Components/: Defines.h  NetIO.h  Window.h
Includes/libos/: Defines.h  FileIO.h  NetIO.h  RefractileAPI.h  Window.h
src/lib/: FileIO.cpp  IFileIO.hpp  InternalRefractile.h  InternalRefractile.hpp  RefractileContext.cpp
src/lib/Audio/: AudioBuffers.cpp  AudioContext.cpp
src/lib/Graphics/: CommandBuffer.cpp  Compiler.hpp  FrameBuffer.cpp  GraphicsContex.hpp  GraphicsContext.cpp  GraphicsWindow.h  ShaderProgram.cpp  Share.h  Share.hpp  Structs.h  vkExternal.h  vkExternal.hpp
src/lib/Interface/Cpp/: AudioManager.cpp  GraphicsContext.cpp  Main.cpp  Window.cpp
src/lib/Interface/Headers/: AbstractAudioManager.hpp  AbstractGraphicsContex.hpp  AbstractWindow.hpp  Abstracts.hpp  StructsDefines.hpp
src/lib/Jni/: FileIO.cpp  Handlers.hpp  NetIO.cpp
src/lib/Linux/: FileIO.cpp  Linux.hpp  NetIO.cpp  Window.cpp  Window.h  Window.hpp
src/lib/Linux/Audio/: ALSAAudioManager.cpp  ALSAAudioManager.hpp  AudioBuffers.cpp  AudioContext.cpp
src/lib/Linux/Graphics/: CommandBuffer.cpp  GraphicsContext.cpp  Vulkan.cpp  Vulkan.hpp  vkExternal.hpp
src/lib/Linux/Window/: DirectScreen.cpp  DirectScreen.h  DirectScreen.hpp  LinuxWindow.h  LinuxWindow.hpp  Wayland.cpp  Wayland.h  Wayland.hpp  Xcb.cpp  Xcb.h  Xcb.hpp  xdg-shell-client-protocol.h
src/lib/Posix/: FileIO.cpp  NetIO.cpp
src/lib/Windows/: FileIO.cpp  NetIO.cpp  Window.h  Windows.hpp
src/lib/Windows/Audio/: Win32AudioManager.cpp  Win32AudioManager.hpp
src/lib/Windows/FileIO/: Win32FileIO.cpp  WinRTFileIO.cpp
src/lib/Windows/Graphics/: DirectX.cpp  DirectX.hpp
src/lib/Windows/Window/: Win32Window.cpp  Win32Window.hpp  WinRTWindow.cpp  WinRTWindow.hpp
src/tests/: Cmake.h  FileIOTest.cpp  FileIOTest.h  Main.cpp  NetIOTest.cpp  NetIOTest.h
tests/Shader/: layout.json  settings.json
(+15 files in other folders)
